Inclusão CSS pg Curiosidades

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <h1>Ponto turistico de Recife</h1><hr>
             <nav>
                 <a href="#">Contatos</a>
-                <a href="#">Novidades</a>
-                <a href="#"">Sobre nós</a>
+                <a href="curiosidades.html">Curiosidades</a>
+                <a href="#">Sobre nós</a>
                 <a href="praias_recife.html">Praias</a><hr>
             </nav>
     
