--- a/praias_recife.html
+++ b/praias_recife.html
@@ -12,7 +12,7 @@
         <h1>As melhores praias de Recife</h1><hr>
             <nav>
                 <a href="#">Contatos</a>
-                <a href="#">Novidades</a>
+                <a href="curiosidades.html">Curiosidades</a>
                 <a href="#">Sobre nós</a>
                 <a href="index.html">Voltar</a><hr>
             </nav>
